--- a/index.html
+++ b/index.html
@@ -1,184 +1,231 @@
-<!DOCTYPE HTML>
-<!--
-	Solid State by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>AJ DeCaprio</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	</head>
-	<body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>AJ DeCaprio - Home</title>
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+  <!-- CSS  -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+</head>
+<body>
+  <nav class="white" role="navigation">
+    <div class="nav-wrapper container">
+      <a id="logo-container" href="#" class="brand-logo"><!--img src="img/logo.png" alt="AJ De Caprio logo"-->AJ DeCaprio Logo</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="#">Navbar Link</a></li>
+      </ul>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">AJ DeCaprio</a></h1>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
+      <ul id="nav-mobile" class="sidenav">
+        <li><a href="#">Navbar Link</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    </div>
+  </nav>
 
-				<!-- Menu -->
-					<nav id="menu">
-						<div class="inner">
-							<h2>Menu</h2>
-							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
-							</ul>
-							<a href="#" class="close">Close</a>
-						</div>
-					</nav>
+  <div id="index-banner" class="parallax-container">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <br><br>
+        <h1 class="header center grey-text text-lighten-2">AJ DECAPRIO</h1>
+        <div class="row center">
+          <h5 class="header col s12 light">FILMMAKER & VISUAL DESIGNER BASED IN ATLANTA, GA</h5>
+        </div>
+        <div class="row center">
+          <a href="#" id="download-button" class="btn-large waves-effect waves-light grey">Portfolio</a>
+        </div>
+        <br><br>
 
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<a href="#" class="image"><img src="images/logo2.png" alt="" /></a>
-							<div class="logo"><span class="icon fa-picture-o"></span></div>
-							<h2>AJ DeCaprio</h2>
-							<p>Cinematographer & Producer based in Orlando, FL</p>
-						</div>
-					</section>
+      </div>
+    </div>
+    <div class="parallax"><img src="img/landscape.png" alt="Unsplashed background img 1"></div>
+  </div>
 
-				<!-- Wrapper -->
-					<section id="wrapper">
+  <div class="container">
+    <div class="section">
 
-						<!-- One -->
-							<section id="one" class="wrapper spotlight style1">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/aj.png" alt="" /></a>
-									<div class="content">
-										<h2 class="major">A little about me</h2>
-										<p>Hi ya! I'm AJ. I currently study Cinema Studies at the University of Central Florida. As a filmmaker, my goal is to record real people and their journey through life. </br> Then to craft films that inspire, inform, and absorb an audience.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
+      <div class="row">
+        <div class="col s12 m6 center">
+          <img src="https://placeimg.com/300/300/any">
+        </div>
+        <div class="col s12 m6 offset-s6 center">
+          <h3><i class="mdi-content-send grey-text"></i></h3>
+          <h4>About Me</h4>
+          <p class="left-align light">Hi ya! I'm AJ.
+            I'm pursuing an MFA in Film & Television at SCAD in Atlanta, GA.
+            I enjoy
+            As a filmmaker, my goal is to record real people and their journey through life.
+            Then to craft films that inspire, inform, and absorb an audience.</p>
+        </div>
+      </div>
 
-						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/ron.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Hello!</h2>
-										<p>I'm Ron! I'm AJ's son. You should hire him because he is the best!</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
+    </div>
+  </div>
 
-						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpeg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
 
-						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
-								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-									<section class="features">
-										<article>
-											<a href="#https://www.youtube.com/watch?time_continue=2&v=hkmFsbJA8bU" class="image"><img src="images/yosemite.jpg" alt="" /></a>
-											<h3 class="major">My Yosemite</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#https://www.youtube.com/watch?time_continue=2&v=hkmFsbJA8bU" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">ESQUE - The Door</h3>
-											<p>A concert performance at the St. Petersburg State Theatre featuring ESQUE, covering "The Door" by D'Angelo and The Vanguard.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-									</section>
-									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
-									</ul>
-								</div>
-							</section>
 
-					</section>
 
-				<!-- Footer -->
-					<section id="footer">
-						<div class="inner">
-							<h2 class="major">Have a story? </br>I can tell it your way.</h2>
-							<p>Whether it's a story from the past or one unfolding in the present, I want to be there to tell it: Stories about heroes, tragedies, or triumphs from the past. Stories of your creative work, or your creative process. My goal as a filmmaker is to share fascinating experiences from the real world. If you think you have a story to tell, I have the passion and the technical expertise to tell it the right way; your way.</br>Contact me below and we can get to work.</p>
-							<form method="post" action="#">
-								<div class="field">
-									<label for="name">Name</label>
-									<input type="text" name="name" id="name" />
-								</div>
-								<div class="field">
-									<label for="email">Email</label>
-									<input type="email" name="email" id="email" />
-								</div>
-								<div class="field">
-									<label for="message">Message</label>
-									<textarea name="message" id="message" rows="4"></textarea>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-							<ul class="contact">
-								<li class="fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li>
-								<li class="fa-phone">(727) 692-0538</li>
-								<li class="fa-envelope"><a href="#">AJ@AJDeCaprio.com</a></li>
-								<li class="fa-youtube"><a href="#https://www.youtube.com/channel/UCJvjbZ6SPmiBK9S8sHtNCKw">youtube.com/</a></li>
-								<li class="fa-facebook"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; AJ DeCaprio. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</section>
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h3 class="header col s12 light">Featured Video Title</h3>
+          <div class="icon-block">
+            <h2 class="center grey-text"><i class="material-icons">play_circle_filled</i></h2>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
+  </div>
 
-			</div>
+  <div class="container">
+    <div class="section">
 
-		<!-- Scripts -->
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center grey-text"><i class="material-icons">local_movies</i></h2>
+            <h5 class="center">Film</h5>
 
-	</body>
+            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center grey-text"><i class="material-icons">color_lens</i></h2>
+            <h5 class="center">Graphic Design</h5>
+
+            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center grey-text"><i class="material-icons">camera_alt</i></h2>
+            <h5 class="center">Photography</h5>
+
+            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="section">
+
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-image">
+              <img src="img/hfthumb.png">
+              <span class="card-title">Hello Fresh Commercial</span>
+              <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">play_arrow</i></a>
+            </div>
+            <div class="card-content">
+              <p>Description</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-image">
+              <img src="img/grthumb.png">
+              <span class="card-title">Golden Ratio Music Video</span>
+              <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">play_arrow</i></a>
+            </div>
+            <div class="card-content">
+              <p>Description</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-image">
+              <img src="img/ehhthumb.png">
+              <span class="card-title">SCAD: Every Helping Hand</span>
+              <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">play_arrow</i></a>
+            </div>
+            <div class="card-content">
+              <p>Description</p>
+            </div>
+          </div>
+        </div>
+
+
+
+      </div>
+
+    </div>
+  </div>
+
+
+
+
+
+
+
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+        </div>
+      </div>
+    </div>
+    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+  </div>
+
+  <footer class="page-footer grey">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Company Bio</h5>
+          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+
+
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Settings</h5>
+          <ul>
+            <li><a class="white-text" href="#!">Link 1</a></li>
+            <li><a class="white-text" href="#!">Link 2</a></li>
+            <li><a class="white-text" href="#!">Link 3</a></li>
+            <li><a class="white-text" href="#!">Link 4</a></li>
+          </ul>
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Connect</h5>
+          <ul>
+            <li><a class="white-text" href="https://www.youtube.com/channel/UCJvjbZ6SPmiBK9S8sHtNCKw">Youtube</a></li>
+            <li><a class="white-text" href="https://vimeo.com/user14061651">Vimeo</a></li>
+            <li><a class="white-text" href="https://www.linkedin.com/in/ajdecaprio/">LinkedIn</a></li>
+            <li><a class="white-text" href="https://www.instagram.com/ajdecaprio/">Instagram</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      &copy; 2019 AJ DeCaprio</a>
+      </div>
+    </div>
+  </footer>
+
+
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
+
+  </body>
 </html>
