--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="img/landscape.png" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="images/pic06.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
   <div class="container">
@@ -78,7 +78,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="images/pic06.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
   <div class="container">
@@ -125,7 +125,7 @@
         <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
-              <img src="img/hfthumb.png">
+              <img src="images/hfthumb.png">
               <span class="card-title">Hello Fresh Commercial</span>
               <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">play_arrow</i></a>
             </div>
@@ -138,7 +138,7 @@
         <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
-              <img src="img/grthumb.png">
+              <img src="images/grthumb.png">
               <span class="card-title">Golden Ratio Music Video</span>
               <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">play_arrow</i></a>
             </div>
@@ -151,7 +151,7 @@
         <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
-              <img src="img/ehhthumb.png">
+              <img src="images/ehhthumb.png">
               <span class="card-title">SCAD: Every Helping Hand</span>
               <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">play_arrow</i></a>
             </div>
@@ -182,7 +182,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="images/pic06.jpg" alt="Unsplashed background img 3"></div>
   </div>
 
   <footer class="page-footer grey">
