--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="images/pic06.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="images/gradient.png" alt="Unsplashed background img 1"></div>
   </div>
 
   <div class="container">
@@ -78,7 +78,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="images/pic06.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="images/gradient.png" alt="Unsplashed background img 2"></div>
   </div>
 
   <div class="container">
@@ -182,7 +182,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="images/pic06.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="images/gradient.png" alt="Unsplashed background img 3"></div>
   </div>
 
   <footer class="page-footer grey">
