--- a/index.html
+++ b/index.html
@@ -9,11 +9,24 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      var elems = document.querySelectorAll('.carousel');
+      var instances = M.Carousel.init(elems, options);
+    });
+
+    // Or with jQuery
+
+    $(document).ready(function(){
+      $('.carousel').carousel();
+    });
+  </script>
 </head>
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo"><!--img src="img/logo.png" alt="AJ De Caprio logo"-->AJ DeCaprio Logo</a>
+      <a id="logo-container" href="#" class="brand-logo"><!--img src="img/logo.png" alt="AJ De Caprio logo"-->Logo</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Navbar Link</a></li>
       </ul>
@@ -40,7 +53,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="images/gradient.png" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="https://placeimg.com/1920/1080/any/grayscale" alt="Unsplashed background img 1"></div>
   </div>
 
   <div class="container">
@@ -48,14 +61,13 @@
 
       <div class="row">
         <div class="col s12 m6 center">
-          <img src="https://placeimg.com/300/300/any">
+          <img src="https://placeimg.com/300/300/any/grayscale">
         </div>
         <div class="col s12 m6 offset-s6 center">
           <h3><i class="mdi-content-send grey-text"></i></h3>
           <h4>About Me</h4>
           <p class="left-align light">Hi ya! I'm AJ.
             I'm pursuing an MFA in Film & Television at SCAD in Atlanta, GA.
-            I enjoy
             As a filmmaker, my goal is to record real people and their journey through life.
             Then to craft films that inspire, inform, and absorb an audience.</p>
         </div>
@@ -67,20 +79,8 @@
 
 
 
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h3 class="header col s12 light">Featured Video Title</h3>
-          <div class="icon-block">
-            <h2 class="center grey-text"><i class="material-icons">play_circle_filled</i></h2>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="images/gradient.png" alt="Unsplashed background img 2"></div>
-  </div>
 
+<div class="grey">
   <div class="container">
     <div class="section">
 
@@ -115,6 +115,21 @@
       </div>
 
     </div>
+  </div>
+</div>
+
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h3 class="header col s12 light">Featured Video Title</h3>
+          <div class="icon-block">
+            <h2 class="center grey-text"><i class="material-icons">play_circle_filled</i></h2>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="parallax"><img src="https://placeimg.com/1920/1080/any/grayscale" alt="Placeholder"></div>
   </div>
 
   <div class="container">
@@ -162,15 +177,39 @@
         </div>
 
 
-
       </div>
 
     </div>
   </div>
 
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h3 class="header col s12 light">ESQUE Featured Photo</h3>
+          <div class="icon-block">
+            <h2 class="center grey-text"><i class="material-icons">play_circle_filled</i></h2>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="parallax"><img src="https://placeimg.com/1920/1080/any/grayscale" alt="Placeholder"></div>
+  </div>
+
+  <div class="container">
+    <div class="section">
+
+      <div class="carousel">
+        <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
+        <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
+        <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
+        <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/250/250/nature/4"></a>
+        <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
+      </div>
 
 
-
+    </div>
+  </div>
 
 
 
@@ -182,7 +221,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="images/gradient.png" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="https://placeimg.com/1920/1080/any/grayscale" alt="Placeholder"></div>
   </div>
 
   <footer class="page-footer grey">
