--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="https://placeimg.com/1920/1080/any/grayscale" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="gradient.png" alt="Unsplashed background img 1"></div>
   </div>
 
   <div class="container">
@@ -129,7 +129,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="https://placeimg.com/1920/1080/any/grayscale" alt="Placeholder"></div>
+    <div class="parallax"><img src="gradient.png" alt="Placeholder"></div>
   </div>
 
   <div class="container">
@@ -193,7 +193,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="https://placeimg.com/1920/1080/any/grayscale" alt="Placeholder"></div>
+    <div class="parallax"><img src="gradient.png" alt="Placeholder"></div>
   </div>
 
   <div class="container">
@@ -221,7 +221,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="https://placeimg.com/1920/1080/any/grayscale" alt="Placeholder"></div>
+    <div class="parallax"><img src="gradient.png" alt="Placeholder"></div>
   </div>
 
   <footer class="page-footer grey">
