--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                 <div class="subheading mb-3">
                   <i>"Reformation Brewery"</i> · Sep 2018<br>
                   <i>"High Adventure"</i> · Apr 2017<br>
-                  <i>"Find and Escape"</i> · Sep 2016<br>
+                  <i>"Find an Escape"</i> · Sep 2016<br>
                   <i>"Eleven"</i> · Oct 2016
                 </div>
               </div>
