--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
         </div>
       </section>
                 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="contact">
         <div class="my-auto">
           <h2 class="mb-5">Contact</h2>
             
