--- a/index.html
+++ b/index.html
@@ -496,8 +496,8 @@
           <h2 class="mb-5">Contact</h2>
             
           <form method="POST" action="https://formspree.io/aj@ajdecaprio.com">
-          <input type="email" name="email" placeholder="Your Email">
-          <textarea name="message" placeholder="Your Message"></textarea>
+          <input type="email" name="email" placeholder="Your Email" cols="10"><br>
+          <textarea name="message" placeholder="Your Message" cols="30" rows="10"></textarea><br>
           <button type="submit">Send</button>
           </form>
         
