--- a/index.html
+++ b/index.html
@@ -497,11 +497,12 @@
             
           <form method="POST" action="https://formspree.io/aj@ajdecaprio.com">
           <div class="form-group">
-            <input type="email" name="email" placeholder="Your Email" cols="10"><br>
-          </div>
+            <input type="email" name="email" placeholder="Your Email" cols="10">
+          </div><br><br>
           <div class="form-group">
             <textarea name="message" placeholder="Your Message" cols="30" rows="10"></textarea><br>
-            <button type="submit">Send</button>
+          </div>
+            <button type="submit" class="btn btn-primary">Send</button>
           </div>
           </form>
         
