--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
           <div class="form-group">
             <textarea name="message" placeholder="Your Message" cols="30" rows="10"></textarea><br>
           </div>
-            <button type="submit" class="btn">Send</button>
+            <button type="submit" class="btn btn-dark">Send</button>
           </div>
           </form>
         
