--- a/index.html
+++ b/index.html
@@ -498,6 +498,8 @@
           <form method="POST" action="https://formspree.io/aj@ajdecaprio.com">
           <div class="form-group">
             <input type="email" name="email" placeholder="Your Email" cols="10">
+          </div>
+          <div class="form-group">
             <textarea name="message" placeholder="Your Message" cols="30" rows="10"></textarea><br>
           </div>
             <button type="submit" class="btn btn-dark">Send</button>
