--- a/index.html
+++ b/index.html
@@ -495,10 +495,10 @@
         <div class="my-auto">
           <h2 class="mb-5">Contact</h2><br>
           <div>
-          <h3>Have a Story?</h3>
+          <h3>Have a Story?</h3><br>
           <h4>I can tell it your way.</h4>
-          <p>Whether it's a story from the past or one unfolding in the present, I want to be there to tell it: Stories about heroes, tragedies, or triumphs from the past. Stories of your creative work, or your creative process. My goal as a filmmaker is to share fascinating experiences from the real world. If you think you have a story to tell, I have the passion and the technical expertise to tell it the right way; your way.</p>
-          <h4>Contact me below and we can get to work.</h4>  
+          <p>Whether it's a story from the past or one unfolding in the present, I want to be there to tell it: Stories about heroes, tragedies, or triumphs from the past. Stories of your creative work, or your creative process. My goal as a filmmaker is to share fascinating experiences from the real world. If you think you have a story to tell, I have the passion and the technical expertise to tell it the right way; your way.</p><br>
+          <h4>Contact me below and we can get to work.</h4> 
           </div>
           <form method="POST" action="https://formspree.io/aj@ajdecaprio.com">
           <div class="form-group">
