--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
       </section>
                 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="contact">
-        <div class="my-auto">
+        <div class="my-auto col-4">
           <h2 class="mb-5">Contact</h2>
           <h3>Have a Story?</h3>
           <h4>I can tell it your way.</h4>
