--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta name="description" content="AJ DeCaprio, cinematographer, producer, graphic designer and life long filmmaker who’s been creating videos since I was thirteen years old.">
     <meta name="author" content="AJ DeCaprio">
     <meta name="keywords" content="AJ,DeCaprio,AJ DeCaprio,filmmaker,video,videographer,cinematographer,producer,film,television,filming,streaming,content producer,media,scad,ucf,social media,orlando,atlanta,clearwater,florida,georgia,photography,photographer,photo,av,av technician,event production,production technician,adobe,photoshop,premiere">
-
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    
     <title>AJ DeCaprio</title>
 
     <!-- Bootstrap core CSS -->
