--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="subheading mb-5">1660 Peachtree St NW · Atlanta, GA 30309 · (727) 692-0538 ·
             <a href="mailto:name@email.com">aj@ajdecaprio.com</a>
           </div>
-          <p class="lead mb-5">Hi ya! I'm AJ. As a filmmaker, my goal is to create and capture unique, human stories. Then to craft films that inspire, absorb and entertain audiences.
+          <p class="lead mb-5">As a filmmaker, my goal is to create and capture unique, human stories. Then to craft films that inspire, absorb and entertain audiences.
             <br><br>I’m a cinematographer, editor, and filmmaker who’s been pursuing a lifelong journey in video production. I’ve participated in many fields of production; having directed commercials, short films, music videos, live events, and travelogues.
             <br><br>In my off time, I take neat photos, build messy computers, practice my beat-up bass, and play pleasant video games.</p>
           <div class="social-icons">
@@ -361,8 +361,8 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Digital Media Specialist</h3>
-              <div class="subheading mb-3">ESQUE</div>
+              <h3 class="mb-0">Digital Media Producer</h3>
+              <div class="subheading mb-3">ESQUE Productions</div>
               <p>I helped develop and reimagine the ESQUE brand through a creative lens and then implemented this aesthetic through various creative projects. I then used research to observe brand effectiveness and adjust according to fan feedback / data. I also oversaw the brands social media platforms and guided the artists creative vision through graphic design. This included the creation of  logos, posters, videos, and album covers.</p>
             </div>
             <div class="resume-date text-md-right">
@@ -372,7 +372,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Event Technician</h3>
+              <h3 class="mb-0">Event Production Technician</h3>
               <div class="subheading mb-3">UCF Student Union</div>
               <p>I manage, setup, and troubleshoot the AV equipment for all the Student Union as well as our two other event centers located on campus. I also help supervise and teach our Event Associates about mixer boards, projectors, microphones, sound systems, and proper cable management. As a leader, I assist clients with any tech-related issues efficiently and ensure the event exceeds their expectations.</p>
             </div>
