--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
                 <div class="subheading mb-3">
                   <i>"Reformation Brewery"</i> · Sep 2018<br>
                   <i>"High Adventure"</i> · Apr 2017<br>
-                  <i>"Eleven"</i> · Oct 2016
-                  <i>"Find an Escape"</i> · Sep 2016<br>
+                  <i>"Eleven"</i> · Oct 2016Br>
+                  <i>"Find an Escape"</i> · Sep 2016
                 </div>
               </div>
               <div class="col">
