--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <span class="text-primary">DeCaprio</span>
           </h1>
           <div class="subheading mb-5">
-            Atlanta, GA · (727) 692-0538 · <a href="mailto:name@email.com">aj@ajdecaprio.com</a> · <a href="AJ DeCaprio.pdf">Resume</a>
+            Atlanta, GA · (727) 692-0538 · <a href="mailto:name@email.com">aj@ajdecaprio.com</a> · <a href="AJ_DeCaprio_Resume.pdf">Resume</a>
           </div>
           <p class="lead mb-5">As a filmmaker, my goal is to create and capture unique, human stories. Then to craft films that inspire, absorb and entertain audiences.
             <br><br>I’m a cinematographer, editor, and filmmaker who’s been pursuing a lifelong journey in video production. I’ve participated in many fields of production; having directed commercials, short films, music videos, live events, and travelogues.
